--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
     <head>
-        <title>I am a title!</title>
+        <title>I am a title</title>
     </head>
 
     <body>
         <h1>I'm a header 1!</h1>
         <img src="https://avatars.githubusercontent.com/u/62253824?v=4">
-        Some content.
+        <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
     </body>
 </html>
